<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <!-- Body TextViews -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-162dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutHeadTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/about_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <!-- HL = hyperlink -->
            <!-- Hyperlink TextViews for SFX resources -->

            <TextView
                android:layout_width="300dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:text="@string/about_createdBy" />

            <TextView
                android:id="@+id/aboutBodyTextView"
                android:layout_width="300dp"
                android:layout_height="158dp"
                android:layout_marginStart="20dp"
                android:text="@string/about_body"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/aboutResourcesHead"
                android:layout_width="195dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:text="@string/about_ResourcesHead" />

            <TextView
                android:id="@+id/aboutSFXsHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/about_SFXsHead" />

            <TextView
                android:id="@+id/twinkHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/twink_sfx" />

            <TextView
                android:id="@+id/fanfareHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/fanfare_sfx" />

            <TextView
                android:id="@+id/sheepHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sheep_sfx" />


            <TextView
                android:id="@+id/munchHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:text="@string/munch_sfx" />


            <!--Hyperlink TextViews for IMG resources-->

            <TextView
                android:id="@+id/aboutIMGsHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/about_IMGsHead" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/checkedGreyHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:text="@string/checkeredGreyBG_img" />

            <TextView
                android:id="@+id/achieveAppleHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/achieveApple_img" />

            <TextView
                android:id="@+id/checkedPinkHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/checkeredPinkBG_img" />

            <TextView
                android:id="@+id/achieveEmojiHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/achieveEmoji_img"
                />

            <TextView
                android:id="@+id/achievePlumHLTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/achievePlum_img" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>