<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="40dp"
    android:elevation="400dp"
    app:cardBackgroundColor="#FCF7F2" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" >

        <TextView
            android:id="@+id/achievementLevelTextView"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="120dp"
            android:fontFamily="casual"
            android:text="@string/level"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/numPlayersTextView"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="135dp"
            android:fontFamily="casual"
            android:text="@string/number_of_players"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="135dp"
            android:fontFamily="casual"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/combinedScoreTextView"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="134dp"
            android:fontFamily="casual"
            android:text="@string/combined_score"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/difficultyTextView"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="113dp"
            android:layout_marginEnd="135dp"
            android:fontFamily="casual"
            android:text="@string/difficulty"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/achievementImageView"
            android:layout_width="133dp"
            android:layout_height="135dp"
            android:layout_alignTop="@+id/achievementLevelTextView"
            android:layout_alignEnd="@+id/achievementLevelTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            app:srcCompat="@drawable/apple" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>